# Solana-Chat

./: .env.example  .env.production  .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vercel.json  webpack.config.js
program/: Cargo.toml
program/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
public/: index.html
src/: App.tsx  index.tsx  styles.css
src/components/: ChatInterface.tsx  WalletConnector.tsx
src/utils/: config.ts  solana.ts
