[package]
name = "solana-chat-program"
version = "0.1.0"
edition = "2021"
description = "Solana program for a decentralized chat application"

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.17.0"
thiserror = "1.0.49"
borsh = "0.10.3"
borsh-derive = "0.10.3"

[lib]
crate-type = ["cdylib", "lib"]

